--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       type="image/x-icon"
       href="../images/icons/cookie.svg"
     >
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="./styles/main.css">
   </head>
   <body class="page__body">
     <header class="page__header header">
@@ -61,7 +61,7 @@
             grid__item--desktop-3-6
             grid__item--screen-3-6
           "
-          src="/images/Cookie.png"
+          src="images/Cookie.png"
           alt="Cookie"
           >
           <form
@@ -115,7 +115,7 @@
               grid__item--screen-1-3"
           >
             <img
-              class ="card__image" 
+              class ="card__image"
               src="images/products/product1.jpg"
               alt="cakes"
             >
